@@ -1,11 +1,11 @@
 <div class="prototype">
-  $Tt_bunny_my_set_circle@ $Sgl_bunny_my_set_circle@;
+  $Tt_bunny_my_set_disk@ $Sgl_bunny_my_set_disk@;
 </div>
 <hr />
 
 <div class="resume">
   <h3>Description</h3>
-  $A This function pointer is the one used by bunny_set_circle
+  $A This function pointer is the one used by bunny_set_disk
   when its target is a t_bunny_pixelarray.
 </div>
 <hr />
@@ -14,7 +14,7 @@
   <h3>Related functions</h3>
   <ul>
     <li>t_bunny_my_set_pixel</li>
-    <li>t_bunny_my_set_circle</li>
+    <li>t_bunny_my_set_disk</li>
     <li>t_bunny_my_set_line</li>
     <li>t_bunny_my_set_polygon</li>
     <li>t_bunny_my_set_geometry</li>
